update server controllers to return pastGuesses as part of initialization and openapi spec
